# CSSE4011_Project

./: OTA_GUI.py  README.md
Thingy52/: CMakeLists.txt  prj.conf
Thingy52/src/: main.c  node_helpers.c  node_helpers.h
base_node/: CMakeLists.txt  prj.conf
base_node/boards/: xiao_ble_nrf52840_sense.overlay
base_node/include/: air_quality.h  buzzer.h  env_packet.h  json_serial.h  kalman.h  node_buffer.h  nus_central.h  watchdog.h
base_node/src/: air_quality.c  buzzer.c  json_serial.c  kalman.c  main.c  node_buffer.c  nus_central.c  watchdog.c
mobile_node/: CMakeLists.txt  prj.conf
mobile_node/include/: ble.h  env_packet.h  nus_peripheral.h
mobile_node/src/: ble.c  main.c  nus_peripheral.c  watchdog.c
